--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,13 +23,13 @@
 {# TODO: add a flash #}
 
 {% with messages = get_flashed_messages() %}
-  {% if messages %}
+{% if messages %}
     <ul class=flashes>
     {% for message in messages %}
-      <strong>{{ message }}</strong>
+        <li>{{ message }}</li>
     {% endfor %}
     </ul>
-  {% endif %}
+{% endif %}
 {% endwith %}
 
 <main>
