adding a route for monthly graph

--- a/templates/ranking_graph.html
+++ b/templates/ranking_graph.html
@@ -6,5 +6,7 @@
 {% endblock head %}
 
 {% block main %}
+
+    <embed src="{{url_for('render_ranking_graph')}}">
   {{ line_chart | safe }}
 {% endblock main %}
