Cleaning profile template

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,5 +1,37 @@
 {% extends "layout.html" %}
 
+{% macro macro_player(player)-%}
+<figure>
+    <img src={{ player.gravatar_url }}>
+    <figcaption>
+        <a href="{{ url_for('profile', id_player=player.id_user) }}">{{ player.full_name }}</a>
+    </figcaption>
+</figure>
+{%- endmacro %}
+
+{% macro macro_match(match)-%}
+<article>
+    <h2>
+        <time datetime ="{{ match.date }}">{{ match.date.strftime("%Y-%m-%d %H:%M") }}</time>
+    </h2>
+    <section>
+        <h3>{{ match.score_team_1 }}</h3>
+        {{ macro_player(match.team_1_player_1) }}
+        {% if match.team_1_player_2 %}
+            {{ macro_player(match.team_1_player_2)}}
+        {% endif %}
+    </section>
+    <section>
+        <h3>{{ match.score_team_2 }}</h3>
+        {{ macro_player(match.team_2_player_1) }}
+        {% if match.team_2_player_2 %}
+            {{ macro_player(match.team_2_player_2)}}
+        {% endif %}
+    </section>
+</article>
+{%- endmacro %}
+
+
 {% block main %}
   <article>
     <h2>{{ user.full_name }}</h2>
@@ -7,100 +39,60 @@
     <img src="{{ user.gravatar_url }}">
 
     {% if user.number_of_match %}
+    
       <section>
-        {# TODO: I can't go further, sorry :'-( #}
-        <p><strong>Elo</strong> : {{user.ranking}}</p>
-        <p><strong>Victories :</strong>  {{user.nb_victories}}</p>
-        <p><strong>Defeats :</strong> {{user.nb_defeats}}</p>
+        <p>Elo : {{user.ranking}}</p>
+        <p>Victories : {{user.nb_victories}}</p>
+        <p>Defeats : {{user.nb_defeats}}</p>
 
         <figure>
-          <figcaption><strong>Ratio :</strong> {{100*(user.nb_victories/user.number_of_match)| round(2)}}</figcaption>
+          <figcaption>Ratio :{{100*(user.nb_victories/user.number_of_match)| round(2)}}</figcaption>
           <img src="{{ url_for('svg_victory', id_player=user.id_user) }}"></img>
         </figure>
       </section>
 
       <section>
         <p>
-          <strong>Best Teammate(s) : </strong>
+          Best Teammate(s) : 
           {% for user in best_teammate %}
             <a href="{{ url_for('profile', id_player=user.id_user) }}">{{user.full_name}}</a>
           {% else %}
             No best Teammate.
           {% endfor %}
-          <strong>({{best_teammate_coeff}} team victories)</strong> 
+          ({{best_teammate_coeff}} team victories)
         </p>
 
         <p>
-          <strong>Worst Teammate(s) : </strong>
+          Worst Teammate(s) : 
           {% for user in worst_teammate %}
             <a href="{{ url_for('profile', id_player=user.id_user) }}">{{user.full_name}}</a>
           {% else %}
             No Worst Teammate.
           {% endfor %}
-          <strong>({{worst_teammate_coeff}} team defeat(s))</strong> 
+          ({{worst_teammate_coeff}} team defeat(s)) 
         </p>
+        
         <p>
-          <strong>Nemesis : </strong>
+          Nemesis :
           {% for user in nemesis %}
             <a href="{{ url_for('profile', id_player=user.id_user) }}">{{user.full_name}}</a>
           {% else %}
             No nemesis.
           {% endfor %}
-          <strong>({{nemesis_coeff}} defeat(s)))</strong> 
+          ({{nemesis_coeff}} defeat(s))) 
         </p>
+        
       </section>
 
       <section>
         <h1>Matchs played</h1>
         {% for match in matchs %}
-          <article>
-            <h2>
-              <time datetime ="{{ match.date }}">{{ match.date.strftime("%Y-%m-%d %H:%M") }}</time>
-            </h2>
-
-            <section>
-              <h3>{{ match.score_team_1 }}</h3>
-              <figure>
-                <img src={{ match.team_1_player_1.gravatar_url }}>
-                <figcaption>
-                  <a href="{{ url_for('profile', id_player=match.team_1_player_1.id_user) }}">{{ match.team_1_player_1.full_name }}</a>
-                </figcaption>
-              </figure>
-              {% if match.team_1_player_2 %}
-                <figure>
-                  <img src={{ match.team_1_player_2.gravatar_url }}>
-                  <figcaption>
-                    <a href="{{ url_for('profile', id_player=match.team_1_player_2.id_user) }}">{{ match.team_1_player_2.full_name }}</a>
-                  </figcaption>
-                </figure>
-              {% endif %}
-            </section>
-
-            <section>
-              <h3>{{ match.score_team_2 }}</h3>
-              <figure>
-                <img src={{ match.team_2_player_1.gravatar_url }}>
-                <figcaption>
-                  <a href="{{ url_for('profile', id_player=match.team_2_player_1.id_user) }}">{{ match.team_2_player_1.full_name }}</a>
-                </figcaption>
-              </figure>
-              {% if match.team_2_player_2 %}
-                <figure>
-                  <img src={{ match.team_2_player_2.gravatar_url }}>
-                  <figcaption>
-                    <a href="{{ url_for('profile', id_player=match.team_2_player_2.id_user) }}">{{ match.team_2_player_2.full_name }}</a>
-                  </figcaption>
-                </figure>
-              {% endif %}
-            </section>
-
-          </article>
+          {{ macro_match(match) }}
+        {% else %}
+          <p>There is no match yet!</p>  
         {% endfor %}
       </section>
-    {% else %}
-      <section>
-        <p> Hasn't played yet.</p>
-      </section>
     {% endif %}
+    
   </article>
 {% endblock main %}
