--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,53 +14,57 @@
   <section>
     
     <dl>
-      <dt>Elo :</dt> 
+
+      <dt>Elo</dt> 
       <dd>{{user.ranking}}</dd>
-      <dt>Victories :</dt> 
+      
+      <dt>Victories</dt> 
       <dd>{{user.nb_victories}}</dd>
-      <dt>Defeats :</dt> 
+      
+      <dt>Defeats</dt> 
       <dd>{{user.nb_defeats}}</dd>
-      <dt>Ratio :</dt>
+      
+      <dt>Ratio</dt>
       <dd>{{100*(user.nb_victories/user.number_of_match)| round(2)}}</dd>
-    </dl>
+      
+      <dt>Pie-Chart</dt>
+      <dd>
+        <figure>
+          <embed src="{{ url_for('svg_victory', id_player=user.id_user) }}"></embed>
+        </figure>
+      </dd>
 
-    <figure>
-      <embed src="{{ url_for('svg_victory', id_player=user.id_user) }}"></embed>
-    </figure>
-
-  </section>
-
-  <section>
+      <dt>Best Teammate(s)</dt>
+      <dt>
+        {% for user in best_teammate %}
+          <a href="{{ url_for('profile', id_player=user.id_user) }}">{{user.full_name}}</a>
+        {% else %}
+          No best Teammate.
+        {% endfor %}
+        ({{best_teammate_coeff}} team victories)
+      </dt>
+      
+      <dt>Worst Teammate(s)</dt>
+      <dt>
+        {% for user in worst_teammate %}
+          <a href="{{ url_for('profile', id_player=user.id_user) }}">{{user.full_name}}</a>
+        {% else %}
+          No Worst Teammate.
+        {% endfor %}
+        ({{worst_teammate_coeff}} team defeat(s))
+      </dt>
+      
+      <dt>Nemesis</dt>
+      <dt>
+        {% for user in nemesis %}
+          <a href="{{ url_for('profile', id_player=user.id_user) }}">{{user.full_name}}</a>
+        {% else %}
+          No best nemesis.
+        {% endfor %}
+        ({{nemesis_coeff}} team victories)
+      </dt>
     
-    <p>
-    Best Teammate(s) : 
-    {% for user in best_teammate %}
-      <a href="{{ url_for('profile', id_player=user.id_user) }}">{{user.full_name}}</a>
-    {% else %}
-    No best Teammate.
-    {% endfor %}
-    ({{best_teammate_coeff}} team victories)
-    </p>
-
-    <p>
-    Worst Teammate(s) : 
-    {% for user in worst_teammate %}
-      <a href="{{ url_for('profile', id_player=user.id_user) }}">{{user.full_name}}</a>
-    {% else %}
-    No Worst Teammate.
-    {% endfor %}
-    ({{worst_teammate_coeff}} team defeat(s)) 
-    </p>
-
-    <p>
-    Nemesis :
-    {% for user in nemesis %}
-      <a href="{{ url_for('profile', id_player=user.id_user) }}">{{user.full_name}}</a>
-    {% else %}
-    No nemesis.
-    {% endfor %}
-    ({{nemesis_coeff}} defeat(s)) 
-    </p>
+    </dl>
 
   </section>
 
