--- a/templates/match.html
+++ b/templates/match.html
@@ -13,7 +13,7 @@
 <article>
   
   <h2>
-    Match du <time datetime ="{{ match.date }}">{{ match.date.strftime("%Y-%m-%d %H:%M") }}</time>
+    Match played <time datetime ="{{ match.date }}">{{ match.date.strftime("%Y-%m-%d %H:%M") }}</time>
   </h2>
   
   <section>
